--- a/Predicta_Sales&Demand_Kenya.ipynb
+++ b/Predicta_Sales&Demand_Kenya.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyO1R8NLbDv8sIDbbk/igPmM",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/zeyhle-art/caramel/blob/main/Predicta_Sales%26Demand_Kenya.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -52,6 +64,8 @@
         "# STEP 1.1: INSTALL DEPENDENCIES\n",
         "\n",
         "!pip install -q kagglehub statsmodels\n",
+        "!pip install -U kaleido reportlab\n",
+        "\n",
         "\n",
         "print(\"=\"*80)\n",
         "print(\"DEPENDENCIES INSTALLED SUCCESSFULLY\")\n",
@@ -60,17 +74,45 @@
       "metadata": {
         "id": "MA4_zYCRlaND",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cacada40-caaf-4dad-e3c7-9ccdd0e277b2"
+        "outputId": "ed320561-1f8a-405a-fd43-27ff393d46a0"
       },
-      "execution_count": 68,
+      "execution_count": 122,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Collecting kaleido\n",
+            "  Downloading kaleido-1.2.0-py3-none-any.whl.metadata (5.6 kB)\n",
+            "Collecting reportlab\n",
+            "  Downloading reportlab-4.4.9-py3-none-any.whl.metadata (1.7 kB)\n",
+            "Collecting choreographer>=1.1.1 (from kaleido)\n",
+            "  Downloading choreographer-1.2.1-py3-none-any.whl.metadata (6.8 kB)\n",
+            "Collecting logistro>=1.0.8 (from kaleido)\n",
+            "  Downloading logistro-2.0.1-py3-none-any.whl.metadata (3.9 kB)\n",
+            "Requirement already satisfied: orjson>=3.10.15 in /usr/local/lib/python3.12/dist-packages (from kaleido) (3.11.7)\n",
+            "Requirement already satisfied: packaging in /usr/local/lib/python3.12/dist-packages (from kaleido) (26.0)\n",
+            "Collecting pytest-timeout>=2.4.0 (from kaleido)\n",
+            "  Downloading pytest_timeout-2.4.0-py3-none-any.whl.metadata (20 kB)\n",
+            "Requirement already satisfied: pillow>=9.0.0 in /usr/local/lib/python3.12/dist-packages (from reportlab) (11.3.0)\n",
+            "Requirement already satisfied: charset-normalizer in /usr/local/lib/python3.12/dist-packages (from reportlab) (3.4.4)\n",
+            "Requirement already satisfied: simplejson>=3.19.3 in /usr/local/lib/python3.12/dist-packages (from choreographer>=1.1.1->kaleido) (3.20.2)\n",
+            "Requirement already satisfied: pytest>=7.0.0 in /usr/local/lib/python3.12/dist-packages (from pytest-timeout>=2.4.0->kaleido) (8.4.2)\n",
+            "Requirement already satisfied: iniconfig>=1 in /usr/local/lib/python3.12/dist-packages (from pytest>=7.0.0->pytest-timeout>=2.4.0->kaleido) (2.3.0)\n",
+            "Requirement already satisfied: pluggy<2,>=1.5 in /usr/local/lib/python3.12/dist-packages (from pytest>=7.0.0->pytest-timeout>=2.4.0->kaleido) (1.6.0)\n",
+            "Requirement already satisfied: pygments>=2.7.2 in /usr/local/lib/python3.12/dist-packages (from pytest>=7.0.0->pytest-timeout>=2.4.0->kaleido) (2.19.2)\n",
+            "Downloading kaleido-1.2.0-py3-none-any.whl (68 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m69.0/69.0 kB\u001b[0m \u001b[31m3.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading reportlab-4.4.9-py3-none-any.whl (2.0 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m28.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading choreographer-1.2.1-py3-none-any.whl (49 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.3/49.3 kB\u001b[0m \u001b[31m3.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading logistro-2.0.1-py3-none-any.whl (8.6 kB)\n",
+            "Downloading pytest_timeout-2.4.0-py3-none-any.whl (14 kB)\n",
+            "Installing collected packages: reportlab, logistro, pytest-timeout, choreographer, kaleido\n",
+            "Successfully installed choreographer-1.2.1 kaleido-1.2.0 logistro-2.0.1 pytest-timeout-2.4.0 reportlab-4.4.9\n",
             "================================================================================\n",
             "DEPENDENCIES INSTALLED SUCCESSFULLY\n",
             "================================================================================\n"
